feat: describe & update first part of app callbacks

--- a/api-reference/lifecycle-hooks/audio-start.mdx
+++ b/api-reference/lifecycle-hooks/audio-start.mdx
@@ -1,5 +1,5 @@
 ---
-title: "on_audio_end"
+title: "audio_start"
 ---
 
 Hook to react to the end of an audio recording coming from the user's microphone.
