--- a/concepts/app-lifecycle.mdx
+++ b/concepts/app-lifecycle.mdx
@@ -1,5 +1,5 @@
 ---
-title: Chat Life Cycle
+title: App Lifecycle
 ---
 
 Whenever a user connects to your Chainlit app, a new chat session is created. A chat session goes through a life cycle of events, which you can respond to by defining hooks.
