--- a/authentication/password.mdx
+++ b/authentication/password.mdx
@@ -18,7 +18,7 @@ from typing import Optional
 import chainlit as cl
 
 @cl.password_auth_callback
-def auth_callback(username: str, password: str):
+def auth_callback(username: str, password: str) -> Optional[cl.User]:
     # Fetch the user matching username from your database
     # and compare the hashed password with the value stored in the database
     if (username, password) == ("admin", "admin"):
