profile-dynamic-config-docs

--- a/backend/config/overview.mdx
+++ b/backend/config/overview.mdx
@@ -4,6 +4,8 @@ title: "Overview"
 
 The `.chainlit/config.toml` file is created when you run `chainlit run ...` or `chainlit init`. It allows you to configure your Chainlit app and to enable/disable specific features.
 
+You can also dynamically override specific `config.toml` variables by Chat Profile at runtime. See [Dynamic Profile-based Configuration](/api-reference/lifecycle-hooks/on-profile-switch) for details.
+
 It is composed of three sections:
 
 <CardGroup cols={2}>
