--- a/api-reference/message.mdx
+++ b/api-reference/message.mdx
@@ -52,11 +52,9 @@ token_list = ["the", "quick", "brown", "fox"]
 
 @cl.on_chat_start
 async def main():
-    msg = cl.Message(content="")
+    msg = await cl.Message(content="").send()
     for token in token_list:
         await msg.stream_token(token)
-
-    await msg.send()
 ```
 
 ## Update a message
